--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@900&family=Roboto:wght@400;700&display=swap');
+
 * {
     box-sizing: border-box;
 }
@@ -6,4 +8,5 @@ body {
     background-color: #111;
     color: #fff;
     margin: 0;
+    font-family: 'Roboto', sans-serif;
 }
