Ajuste de lista

--- a/src/components/lista/MovieRow.module.css
+++ b/src/components/lista/MovieRow.module.css
@@ -30,3 +30,30 @@
 .img:hover {
     transform: scale(1)
 }
+
+.left, .right {
+    position: absolute;
+    width: 40px;
+    height: 225px;
+    z-index: 99px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    overflow: hidden;
+    background-color: rgba(0, 0, 0, 0.6);
+    cursor: pointer;
+    opacity: 0;
+    transition: all ease 0.5s;  
+}
+
+.left{
+    left:0;
+}
+
+.right{
+    right:0;
+}
+
+.movieRow:hover .left, .movieRow:hover .right{
+    opacity: 1;
+}
