Scrool Listas Netflix

--- a/src/components/destaque/FeatureMovie.module.css
+++ b/src/components/destaque/FeatureMovie.module.css
@@ -82,3 +82,28 @@
     font-size: 18px;
     color: #999;
 }
+
+@media (max-width: 760px){
+    .featured{
+        height: 90vh;
+    }
+    .name {
+        font-size: 40px;
+    }
+    .info {
+        font-size: 16px;
+    }
+    .description {
+        font-size: 14px;
+        max-width: 100%;
+        margin-right: 30px;
+    }
+
+    .btnWatch, .btnList {
+        font-size: 14px;
+    }
+
+    .genres {
+        font-size: 14px;
+    }
+}
