--- a/src/components/lista/MovieRow.module.css
+++ b/src/components/lista/MovieRow.module.css
@@ -12,7 +12,7 @@
 }
 
 .list {
-    width: 999999999px;
+    transition: all ease 0.5s;
 }
 
 .item {
@@ -35,7 +35,7 @@
     position: absolute;
     width: 40px;
     height: 225px;
-    z-index: 99px;
+    z-index: 99;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -56,4 +56,10 @@
 
 .movieRow:hover .left, .movieRow:hover .right{
     opacity: 1;
+}
+
+@media (min-width:760px){
+    .left, .right {
+        opacity: 1;
+    }
 }
