--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -15,6 +15,19 @@ body {
     margin-top: -150px;
 }
 
+.loading {
+    position: fixed;
+    left: 0;
+    right: 0;
+    top: 0;
+    bottom: 0;
+    z-index: 99;
+    display: flex;
+    justify-content:center;
+    background-color: #000;
+    align-items: center;    
+}
+
 footer{
     margin: 50px 0;
     text-align: center;
